--- a/requirements.txt
+++ b/requirements.txt
@@ -13,15 +13,19 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 jiter==0.9.0
 joblib==1.4.2
 nltk==3.9.1
 numpy==2.2.4
 openai==1.68.0
+packaging==24.2
+pluggy==1.5.0
 psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+pytest==8.3.5
 python-dotenv==1.0.1
 PyYAML==6.0.2
 redis==5.2.1
